--- a/Qatar/readme
+++ b/Qatar/readme
@@ -1,1 +1,19 @@
-fghjgfdgv
+# Discrete Optimization
+## TSP of 194 cities in Qatar  
+
+- ### The chosen algorithm       
+  Simulated Annealing Algorithm   
+  
+  <img src="https://user-images.githubusercontent.com/57988473/72668399-96b78800-3a26-11ea-8d16-6dbf78de7759.jpg" width="500">   
+
+- ### The parameters of the algorithm   
+  Starting temperature = 1000     
+  Iteration = 120   
+  Total neighborhoode = 25
+  Level of temperature decreasing (alpha) = 0.95 
+
+- ### The fitness   
+  Minimized Distant = 62494
+
+- ### The computational time  
+  79.37 seconds
